# releaseguard

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  targets.yaml
.github/workflows/: ci.yml
releaseguard/: __init__.py  canary.py  cli.py  drift.py  html_report.py  manifests.py  plugin.py  report.py  runner.py  targets.py
tests/: test_drift.py  test_flaky.py  test_html_report.py  test_manifests.py  test_marker.py  test_runner.py  test_v4_canary.py
